.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Pay_Spine__c.object
<CustomObject>
    <description>Public Sector
Used for FTE salary records against each Grade and Spine Point</description>
    <fields>
        <fullName>xcdhcm__Effective_from__c</fullName>
        <label>Effective from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Effective_to__c</fullName>
        <label>Effective to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__FTE_salary__c</fullName>
        <label>FTE salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Grade_band_L__c</fullName>
        <label>Grade/band</label>
        <referenceTo>xcdhcm__Grade__c</referenceTo>
        <relationshipName>Pay_Spines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Hourly_rate__c</fullName>
        <label>Hourly rate</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Max_spinal_point__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Max spinal point</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Min_spinal_point__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Min spinal point</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Pay_scale__c</fullName>
        <formula>xcdhcm__Grade_band_L__r.xcdhcm__Pay_scale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pay scale</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Spinal_point__c</fullName>
        <label>Spinal point</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Term__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>xCompany</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Terms_L__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>xTerms</label>
        <referenceTo>xcdhcm__Company__c</referenceTo>
        <relationshipName>Pay_Spines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Pay Spine Point</label>
    <listViews>
        <fullName>xcdhcm__All</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Term__c</columns>
        <columns>xcdhcm__Grade_band_L__c</columns>
        <columns>xcdhcm__Spinal_point__c</columns>
        <columns>xcdhcm__FTE_salary__c</columns>
        <columns>xcdhcm__Hourly_rate__c</columns>
        <columns>xcdhcm__Max_spinal_point__c</columns>
        <columns>xcdhcm__Min_spinal_point__c</columns>
        <columns>xcdhcm__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Pay spine point</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pay Spine Points</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>